1-system/5-kube-prometheus-stack/grafana.virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana-virtual-service
spec:
  gateways:
    - istio-system/ezaf-gateway
  hosts:
    # HPE: grafana.ingress.pcai0201.fr2.hpecolo.net
    - grafana.2.28.18.215.sslip.io
  http:
    - match:
        - uri:
            prefix: /public/plugins/grafana-lokiexplore-app/static/js/
      rewrite:
        uri: /public/plugins/grafana-lokiexplore-app/
      route:
        - destination:
            host: kube-prometheus-stack-grafana.unique.svc.cluster.local
            port:
              number: 80
    - route:
        - destination:
            host: kube-prometheus-stack-grafana.unique.svc.cluster.local
            port:
              number: 80
